--- a/style.css
+++ b/style.css
@@ -9,6 +9,13 @@ body {
 	background: #0b4a65;
 }
 
+h1,
+h2,
+h3,
+h4 {
+	font-family: "Quando", serif;
+}
+
 .title-meta {
 	margin: 10px 0;
 	font-size: .9em;
