Adds author and license info

--- a/style.css
+++ b/style.css
@@ -1,6 +1,9 @@
 /*
 Theme name: Teleogistic
 Template: twentytwelve
+Author: Boone Gorges
+Version 1.0
+License: GPLv2
 */
 
 @import url('../twentytwelve/style.css');
